Fix clipping issue in day miller column. Fixes #115.

--- a/mink-plugin/style.css
+++ b/mink-plugin/style.css
@@ -71,7 +71,7 @@
 
 
 #drilldownBox {border: 1px solid #999; z-index: 3;  padding: 2px; position: absolute; z-index: 1; left: 125px; font-family: Arial, sans-serif; background-color: white;}
-#drilldownBox ul {list-style-type: none; width: 90px; float: left;  padding: 0; background-color: white; max-height: 500px; overflow-x: hidden; overflow-y: auto;}
+#drilldownBox ul {list-style-type: none; width: 100px; float: left;  padding: 0; background-color: white; max-height: 500px; overflow-x: hidden; overflow-y: auto;}
 #drilldownBox ul li {list-style-type: none; padding: 0; margin: 0; width: 90px;}
 #drilldownBox ul li:hover {background-color: #ddddff; cursor: pointer;}
 #drilldownBox ul li.selectedOption {background-color: #ddddff;}
